--- a/EJERCICIO_DE_FORMULARIOS/index.html
+++ b/EJERCICIO_DE_FORMULARIOS/index.html
@@ -7,19 +7,32 @@
     <title>Ejercicio de Formularios.png</title>
 </head>
 <body>
-    <div>
-        <h1>Formulario de Registro</h1>
-    </div>
-    <div>
-        <label for="nombre" for="Nombre:"> Nombre:</label>
-        <input type="text" id="nombre">
-        <br></br>
-    </div>
-    <div>
-        <label for="apellido" for="Nombre:"> Apellido:</label>
-        <input type="text" id="apellido">
-        <br></br>
-    </div>
+    <form>
+        <div>
+            <h1>Formulario de Registro</h1>
+        </div>
+        <div>
+            <label for="nombre"> Nombre:</label>
+            <input type="text" id="nombre">
+            <br></br>
+        </div>
+        <div>
+            <label for="apellido"> Apellido:</label>
+            <input type="text" id="apellido">
+            <br></br>
+        </div>
+        <div>
+            <span>Modalidad de Cursada</span>
+            <input type="radio" id="on-demand" name="modalidades" />
+            <label for="on-demand" > On-Demand</label>
+            <input type="radio" id="envivo" name="modalidades" />
+            <label for="envivo" >En Vivo</label>
+        </div>
+        <div>
+            
+        </div>
+    </form>
+
     
 
 </body>
