--- a/EJERCICIO_DE_FORMULARIOS/index.html
+++ b/EJERCICIO_DE_FORMULARIOS/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<br lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio de Formularios.png</title>
 </head>
-<body>
-    <form>
+<br>
+    <br>
         <div>
             <h1>Formulario de Registro</h1>
         </div>
@@ -28,12 +28,25 @@
             <input type="radio" id="envivo" name="modalidades" />
             <label for="envivo" >En Vivo</label>
         </div>
+        <br></br>
         <div>
-            
+            <label for="email"> Correo:</label>
+            <input type="email" id="email">
+        </div>
+        <br></br>
+        <div>
+            <input type="checkbox" id="checkbox1"> 
+            <label for="checkbox1"> Deseo recibir información sobre nuevos posteos en la plataforma de Nucba.</label>
+        </div>
+        <br></br>
+        <div>
+            <input type="checkbox" id="checkbox2"> 
+            <label for="checkbox2"> Declaro que lei los terminos y condiciones y estoy listo para convertirme en desarrollador web Full Stack.</label>
+        </div>
+        <br>
+        <div>
+            <input type="submit" value="Enviar"/>
         </div>
     </form>
-
-    
-
 </body>
 </html>
