--- a/EJERCICIO_DE_LISTAS/index.html
+++ b/EJERCICIO_DE_LISTAS/index.html
@@ -14,21 +14,21 @@
     <div>
         <h3> Datos Personales</h3>
             <ul>
-                <li>Nombre Completo: <b> Lionel Andrés Messi Cuccittini </b> </li>
-                <li>Fecha de Nacimiento: <b>24/6/1987</b></li>
-                <li>Lugar de Nacimiento: <b>Rosario - Argentina</b></li>
+                <li>Nombre Completo: <strong> Lionel Andrés Messi Cuccittini </strong> </li>
+                <li>Fecha de Nacimiento: <strong>24/6/1987</strong></li>
+                <li>Lugar de Nacimiento: <strong>Rosario - Argentina</strong></li>
             </ul>
         <h3>Trayectoria</h3>    
             <ul>
-                <li>1994-1999: <b>Newell´s Old Boys (inferiores)</b></li>
-                <li>2000-2021: <b>Barcelona F.C.</b></li>
-                <li>2021-2022: <b>Paris Saint Germain</b></li>
+                <li>1994-1999: <strong>Newell´s Old Boys (inferiores)</strong></li>
+                <li>2000-2021: <strong>Barcelona F.C.</strong></li>
+                <li>2021-2022: <strong>Paris Saint Germain</strong></li>
             </ul>
             <h3>Títulos con la Selección</h3>    
             <ul>
-                <li>2008: <b>Torneo Olímpico de Fútbol</b></li>
-                <li>2021: <b>Copa América Brasil 2021</b></li>
-                <li>2022: <b>Finalissima</b></li>
+                <li>2008: <strong>Torneo Olímpico de Fútbol</strong></li>
+                <li>2021: <strong>Copa América Brasil 2021</strong></li>
+                <li>2022: <strong>Finalissima</strong></li>
             </ul>    
     </div>        
 </body>
