--- a/LISTAS_ANIDADAS/index.html
+++ b/LISTAS_ANIDADAS/index.html
@@ -42,7 +42,7 @@
      <div>
         <h2>Modalidad de Cursada</h2>
         <ul>
-            <strong> <li>Contenidos en Vivo </strong>
+            <b> <li>Contenidos en Vivo </b>
                 <br></br>
                     <ul>
                         <li>Clases Online en Zoom</li>
@@ -51,7 +51,7 @@
                     </ul>
             </li>
             <br></br>
-            <strong> <li>Contenidos Teórico-práctico </strong>
+            <b> <li>Contenidos Teórico-práctico </b>
                 <br></br>
                     <ul>
                         <li>Teórico
